@@ -460,7 +460,8 @@ class O2MField(CharField):
         from group import ModelRecordGroup
         mod = ModelRecordGroup(self.attrs['relation'], {}, model.window,
                 parent=model, parent_name=self.attrs.get('relation_field', ''),
-                context=self.context)
+                context=self.context,
+                parent_datetime_field=self.attrs.get('datetime_field'))
         mod.signal_connect(mod, 'model-changed', self._model_changed)
         return mod
 
@@ -518,7 +519,8 @@ class O2MField(CharField):
         from group import ModelRecordGroup
         mod = ModelRecordGroup(self.attrs['relation'], {}, model.window,
                 parent=model, parent_name=self.attrs.get('relation_field', ''),
-                context=self.context)
+                context=self.context,
+                parent_datetime_field=self.attrs.get('datetime_field'))
         mod.signal_connect(mod, 'model-changed', self._model_changed)
         model.value[self.name] = mod
         #self.internal.signal_connect(self.internal, 'model-changed',
@@ -550,7 +552,8 @@ class O2MField(CharField):
         model.value[self.name] = ModelRecordGroup(
                 self.attrs['relation'], fields, model.window, parent=model,
                 parent_name=self.attrs.get('relation_field', ''),
-                context=self.context)
+                context=self.context,
+                parent_datetime_field=self.attrs.get('datetime_field'))
         model.value[self.name].signal_connect(model.value[self.name],
                 'model-changed', self._model_changed)
         mod = None
